# scipilot

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  claude_desktop_config.json  pyproject.toml
examples/: raspa.yaml
scipilot/: executor.py  models.py  server.py  tool_loader.py
tests/: test_loader.py
